test: Update webhook manifests to point at standalone svc

--- a/test/framework/resources/prometheus-operator-validatingwebhook.yaml
+++ b/test/framework/resources/prometheus-operator-validatingwebhook.yaml
@@ -5,7 +5,7 @@ metadata:
 webhooks:
   - clientConfig:
       service:
-        name: prometheus-operator
+        name: prometheus-operator-admission-webhook
         namespace: default
         path: /admission-prometheusrules/validate
     failurePolicy: Fail
