example,jsonnet: regenerate
Signed-off-by: Paweł Krupa (paulfantom) <pawel@krupa.net.pl>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -5,6 +5,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.2
+    prometheus-operator.dev/version: 0.53.1
   creationTimestamp: null
   name: alertmanagerconfigs.monitoring.coreos.com
 spec:
@@ -3196,6 +3197,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.2
+    prometheus-operator.dev/version: 0.53.1
   creationTimestamp: null
   name: alertmanagers.monitoring.coreos.com
 spec:
@@ -9242,6 +9244,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.2
+    prometheus-operator.dev/version: 0.53.1
   creationTimestamp: null
   name: podmonitors.monitoring.coreos.com
 spec:
@@ -9843,6 +9846,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.2
+    prometheus-operator.dev/version: 0.53.1
   creationTimestamp: null
   name: probes.monitoring.coreos.com
 spec:
@@ -10483,6 +10487,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.2
+    prometheus-operator.dev/version: 0.53.1
   creationTimestamp: null
   name: prometheuses.monitoring.coreos.com
 spec:
@@ -18799,6 +18804,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.2
+    prometheus-operator.dev/version: 0.53.1
   creationTimestamp: null
   name: prometheusrules.monitoring.coreos.com
 spec:
@@ -18902,6 +18908,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.2
+    prometheus-operator.dev/version: 0.53.1
   creationTimestamp: null
   name: servicemonitors.monitoring.coreos.com
 spec:
@@ -19530,6 +19537,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.2
+    prometheus-operator.dev/version: 0.53.1
   creationTimestamp: null
   name: thanosrulers.monitoring.coreos.com
 spec:
