--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ __pycache__
 .vscode/
 tmp
 
+example/prometheus-operator-crd/*.bak
+
 # These are empty target files, created on every docker build. Their sole
 # purpose is to track the last target execution time to evalualte, whether the
 # container needds to be rebuild
