--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
@@ -2240,11 +2240,12 @@ spec:
                 type: boolean
               globalAlertmanagerConfig:
                 description: GlobalAlertmanagerConfig used to set the global alertmanager
-                  config.
+                  config. The specified global alertmanager config will not force
+                  add a namespace label in routes and inhibitRules.
                 properties:
                   name:
-                    description: Name specify the gloal AlertmanagerConfig name which
-                      is in the same namespace with alertmanager.
+                    description: Name specify the global AlertmanagerConfig name which
+                      is in the same namespace as alertmanager.
                     type: string
                 type: object
               image:
