jsonnet: Forbid write access to root filesystem
Signed-off-by: GitHub <noreply@github.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -25879,6 +25879,7 @@ spec:
             memory: 100Mi
         securityContext:
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
       nodeSelector:
         kubernetes.io/os: linux
       securityContext:
