jsonnet: Drop all linux capabilities
Signed-off-by: ArthurSens <arthursens2005@gmail.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -25878,6 +25878,9 @@ spec:
             memory: 100Mi
         securityContext:
           allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
           readOnlyRootFilesystem: true
       nodeSelector:
         kubernetes.io/os: linux
